# tio-cumbana

./: .env.example  .gitignore  DEVELOPMENT.md  LICENSE  README.md  slides-v2.html  slides.html
.github/workflows/: backend-deploy.yml  ci.yml
backend/: .coverage  .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/models/: schemas.py
backend/app/prompts/: tio_cumbana.py
backend/app/routers/: audio.py  consult.py  market_prices.py
backend/app/services/: anthropic_client.py  audio_cache.py  farmer_context.py  managed_agent.py  market_prices.py  stt.py  tts.py  whatsapp.py
backend/tests/: test_config.py  test_farmer_context.py  test_health.py  test_managed_agent.py  test_market_prices.py  test_prompts.py  test_stt_errors.py  test_tts_errors.py
docs/: architecture.md
frontend/: amplify.yml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/market/: page.tsx
frontend/src/app/retail/: page.tsx
mcp_servers/market_prices/: README.md  pyproject.toml  server.py
mcp_servers/weather/: README.md  pyproject.toml  server.py
mcp_servers/weather/tests/: test_mildew_risk.py
skills/diagnose-mildew/: SKILL.md
skills/diagnose-mildew/references/: treatments.md
