[project]
name = "tio-cumbana-backend"
version = "0.1.0"
description = "Tio Cumbana — an agronomist that watches, remembers, and calls you first."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Elton Laice" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "anthropic>=0.39",
    "elevenlabs>=1.9",
    "supabase>=2.9",
    "structlog>=24.4",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "black>=24.10",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "mypy>=1.13",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=55"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["tests/"]

# managed_agent.py wires the beta Managed Agents API; the SDK's
# beta surface is in flux and the strict-mode types around the
# async stream context manager don't match yet. The runtime path
# is feature-flagged off for the demo.
[[tool.mypy.overrides]]
module = "app.services.managed_agent"
ignore_errors = true
