[project]
name = "tio-cumbana-market-prices-mcp"
version = "0.1.0"
description = "Zimpeto market price MCP server — reads from the community pool."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "mcp[cli]>=1.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server.py"]
